--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-slate
 title: ReposeHub, CDC API Project for Death Records
 description: API Services for Getting and Distributing Decedent Data between Stakeholders.
 show_downloads: true
