--- a/DeathRecord_Puller/src/main/resources/application.properties
+++ b/DeathRecord_Puller/src/main/resources/application.properties
@@ -12,6 +12,8 @@ server.contextPath = /FHIRController
 
 #FHIR.client.serverBaseUrl = https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca
 FHIR.client.serverBaseUrl = http://smart-wip.hdap.gatech.edu:8080/gt-fhir-webapp/base
+FHIR.client.vAserverBaseUrl = https://www.freedomstream.io/CDCArgonaut/api/
+
 FHIR.client.dstuVersion = DSTU2
 PHCR.client.serverBaseURL = http://phcr-controller:8080/PHCR_Controller-0.0.1-SNAPSHOT
 
