--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,16 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.0",
+    "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
     "bootstrap": "^3.3.7",
-    "bulma": "^0.6.1",
+    "bulma": "^0.6.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "eslint": "4.10.0",
-    "eslint-config-react-app": "^2.0.1",
+    "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
@@ -28,23 +28,24 @@
     "file-loader": "1.1.5",
     "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
+    "hoek": "^5.0.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "moment": "^2.19.4",
+    "moment": "^2.22.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.2.0",
-    "react-bootstrap": "^0.32.0",
-    "react-dates": "^16.0.1",
+    "react": "^16.3.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dates": "^16.6.1",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.2.0",
-    "react-jsonschema-form": "^1.0.0",
-    "react-redux": "^5.0.6",
+    "react-dom": "^16.3.2",
+    "react-jsonschema-form": "^1.0.3",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-table": "^6.7.5",
+    "react-table": "^6.8.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
@@ -104,7 +105,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6"
+    "node-sass": "^4.9.0",
+    "sass-loader": "^6.0.7"
   }
 }
