Changed the DeathRecord_Puller dockerfile to use a certificate for the VA. Moved ECR to ecr_javalib.

--- a/DeathRecord_Puller/Dockerfile
+++ b/DeathRecord_Puller/Dockerfile
@@ -9,14 +9,10 @@ RUN apt-get install -y \
       openjdk-8-jdk \
       maven
 	  
-# Define environment variable
-ENV POSTGRES_USER postgres
-ENV POSTGRES_PASSWORD postgres
-ENV POSTGRES_DB ecrdb
+ADD . /usr/src/deathrecord_src
+RUN mvn clean install -DskipTests -f /usr/src/deathrecord_src/ecr_javalib
+RUN mvn clean install -DskipTests -f /usr/src/deathrecord_src/
 
-ADD . /usr/src/fhir_src
-RUN mvn clean install -DskipTests -f /usr/src/fhir_src/ecr_javalib
-RUN mvn clean install -DskipTests -f /usr/src/fhir_src/
-RUN cp /usr/src/fhir_src/target/FHIR_Controller-0.0.1-SNAPSHOT.war $CATALINA_HOME/webapps/
-COPY wait-for-postgres.sh /usr/local/bin/wait-for-postgres.sh
-COPY crontab-utilities ~
+RUN wget https://certs.godaddy.com/repository/gdig2.crt.pem
+RUN keytool -import -alias gdig2_cert_pem -keystore /etc/ssl/certs/java/cacerts -file gdig2.crt.pem -storepass changeit -noprompt
+RUN cp /usr/src/deathrecord_src/target/DeathRecord-0.0.1-SNAPSHOT.war $CATALINA_HOME/webapps/
