Redacted the connection to MITRE logic for now.

--- a/DeathRecord_Puller/pom.xml
+++ b/DeathRecord_Puller/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>DeathRecord</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>FHIR_Controller</name>
+  <name>DeathRecord_Controller</name>
   <url>http://maven.apache.org</url>
 
 	<parent>
