Big Update to match with febuary meeting.

--- a/DeathRecord_Puller/src/main/resources/application.properties
+++ b/DeathRecord_Puller/src/main/resources/application.properties
@@ -8,18 +8,33 @@
 scheduler.scriptFolder = ~/crontab-utilities
 scheduler.scriptUser = root
 
-server.contextPath = /FHIRController
+server.servlet.contextPath = /DeathDataHub
 
 #FHIR.client.serverBaseUrl = https://fhir-open.sandboxcerner.com/dstu2/0b8a0111-e8e6-4c26-a91c-5069cbc6b1ca
 FHIR.client.serverBaseUrl = http://smart-wip.hdap.gatech.edu:8080/gt-fhir-webapp/base
-FHIR.client.VAserverBaseUrl = http://smart-wip.hdap.gatech.edu:8080/gt-fhir-webapp/base
+FHIR.client.VAserverBaseUrl = https://www.freedomstream.io/CDCArgonaut/api/
+
+FHIR.writeclient.serverBaseUrl = http://localhost:8181/gt-fhir-webapp/base
+FHIR.writeclient.VAserverBaseUrl = http://smart-wip.hdap.gatech.edu:8080/gt-fhir-webapp/base
 
 FHIR.client.dstuVersion = DSTU2
-PHCR.client.serverBaseURL = http://phcr-controller:8080/PHCR_Controller-0.0.1-SNAPSHOT
 
-domainservice.url = http://domain-services:80
-domainservice.defaultUsername = Regenstrief
-domainservice.passwords.Regenstrief = myDSPassword
+patientEverything.serverList[0] = https://www.freedomstream.io/CDCArgonaut/api
+patientEverything.fhirVersion[0] = dstu2
+patientEverything.serverList[1] = https://#{gt_fhir_url}
+patientEverything.fhirVersion[1] = stu3
+
+nightingale.adminUsername = admin@example.com
+nightingale.adminPassword = 123456
+
+IDService.idServiceUrl = http://#{patient_index_url}
+
 logging.level.gatech.edu.FHIRController=DEBUG
 logging.level.gatech.edu.DomainService=DEBUG
 logging.level.gatech.edu.common=DEBUG
+logging.level.sun=INFO
+logging.level.org.apache=INFO
+logging.level.org.apache.http=DEBUG
+logging.level.org.springframework.core.env.PropertySourcesPropertyResolver=INFO
+logging.level.org.springframework.beans.factory.support.DefaultListableBeanFactory=INFO
+logging.level.org.springframework.beans.factory.support.DisposableBeanAdapter=INFO
