--- a/DeathRecord_Puller/ecr_javalib/pom.xml
+++ b/DeathRecord_Puller/ecr_javalib/pom.xml
@@ -16,12 +16,9 @@
 	</parent>
 
   <properties>
-  	<java.version>1.7</java.version>
-	<maven.compiler.source>1.7</maven.compiler.source>
-   	<maven.compiler.target>1.7</maven.compiler.target>		
+  	<java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <tomcat.version>8.0.45</tomcat.version>
-    <fhir.version>3.2.0</fhir.version>
   </properties>
 
   <dependencies>
@@ -60,17 +57,17 @@
    	<dependency>
     	<groupId>ca.uhn.hapi.fhir</groupId>
     	<artifactId>hapi-fhir-base</artifactId>
-    	<version>${fhir.version}</version>
+    	<version>3.0.0</version>
     </dependency>
     <dependency>
     	<groupId>ca.uhn.hapi.fhir</groupId>
     	<artifactId>hapi-fhir-client</artifactId>
-    	<version>${fhir.version}</version>
+    	<version>3.0.0</version>
     </dependency>
     <dependency>
     	<groupId>ca.uhn.hapi.fhir</groupId>
     	<artifactId>hapi-fhir-structures-dstu2</artifactId>
-    	<version>${fhir.version}</version>
+    	<version>3.0.0</version>
     </dependency>
    	<dependency>
         <groupId>org.slf4j</groupId>
