--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,3 +1,3 @@
 #REACT_APP_API_URL_CASE=http://localhost:1337/cases
 #REACT_APP_API_URL=http://localhost:1337
-REACT_APP_API_URL_CASE=http://cdcsti.hdap.gatech.edu:8181/PHCR_Controller-0.0.1-SNAPSHOT/ECR
+REACT_APP_API_URL_CASE=http://cdcsti.hdap.gatech.edu:8080/DeathRecord-0.0.1-SNAPSHOT/DeathRecord
