--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL_CASE=http://cdcsti.hdap.gatech.edu:8181/PHCR_Controller-0.0.1-SNAPSHOT/ECR
+REACT_APP_API_URL_CASE=http://cdcsti.hdap.gatech.edu:8080/DeathRecord-0.0.1-SNAPSHOT/DeathRecord
