Updated DDH with better ID server support. Use the  environment variable to set the ID service's endpoint.

--- a/DeathRecord_Puller/src/main/resources/application.properties
+++ b/DeathRecord_Puller/src/main/resources/application.properties
@@ -19,15 +19,10 @@ FHIR.writeclient.VAserverBaseUrl = http://smart-wip.hdap.gatech.edu:8080/gt-fhir
 
 FHIR.client.dstuVersion = DSTU2
 
-patientEverything.serverList[0] = https://www.freedomstream.io/CDCArgonaut/api
-patientEverything.fhirVersion[0] = dstu2
-patientEverything.serverList[1] = https://#{gt_fhir_url}
-patientEverything.fhirVersion[1] = stu3
-
 nightingale.adminUsername = admin@example.com
 nightingale.adminPassword = 123456
 
-IDService.idServiceUrl = http://#{patient_index_url}
+IDService.idServiceURL = ${id_service_url}
 
 logging.level.gatech.edu.FHIRController=DEBUG
 logging.level.gatech.edu.DomainService=DEBUG
